--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -113,18 +113,18 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
 		</td>
-		<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
-		</td>
+		<!--<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
+		</td>-->
 		<td><a href="aptus://devtoo_kdevelop" class="button1"><img src="images/kdevelop.svg" class="appicon"><br />KDevelop</a>
 		</td>
 		<td><a href="aptus://devtoo_kompare" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Kompare</a>
 		</td>
 		<td><a href="aptus://devtoo_latex-cjk-all" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeX CJK</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_latexdraw" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXDraw</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_latexila" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXila</a>
 		</td>
 		<td><a href="aptus://devtoo_latexml" class="button1"><img src="images/tex.svg" class="appicon"><br />LaTeXml</a>
@@ -133,14 +133,14 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
 		</td>
-		<td><a href="aptus://devtoo_lpe" class="button1"><img src="images/text-editor.svg" class="appicon"><br />LPE</a>
-		</td>
-	</tr>
-	<tr>
+		<!--<td><a href="aptus://devtoo_lpe" class="button1"><img src="images/text-editor.svg" class="appicon"><br />LPE</a>
+		</td>-->
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_mono-complete" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Mono</a>
 		</td>
 		<td><a href="aptus://devtoo_nim" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Nim</a>
@@ -151,12 +151,12 @@ Last update: July 23, 2020 by pavroo
 		</td>-->
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_php" class="button1"><img src="images/php.svg" class="appicon"><br />PHP</a>
 		</td>
 		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
 		</td>
 		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
@@ -165,12 +165,12 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_sigil" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Sigil</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_spyder" class="button1"><img src="images/python.svg" class="appicon"><br />Spyder</a>
 		</td>
 		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_texstudio" class="button1"><img src="images/tex.svg" class="appicon"><br />TeXstudio</a>
 		</td>
 		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
@@ -179,12 +179,12 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_umbrello" class="button1"><img src="images/kde.svg" class="appicon"><br />Umbrello</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_valac" class="button1"><img src="images1/vala.svg" class="appicon"><br />Vala</a>
 		</td>
 		<td><a href="aptus://devtoo_valgrind" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Valgrind</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
 		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
