--- a/01-yad/lib/sparky-aptus-appcenter/education.html
+++ b/01-yad/lib/sparky-aptus-appcenter/education.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 23, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Education/Science A-G | APTus AppCenter</title>
@@ -71,17 +71,19 @@ Last update: June 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_carmetal" class="button1"><img src="images/glade.svg" class="appicon"><br />Carmetal</a>
 		</td>
-		<td><a href="aptus://educat1_chemtool" class="button1"><img src="images/chemtool.svg" class="appicon"><br />Chemtool</a>
-		</td>
+		<!--<td><a href="aptus://educat1_chemtool" class="button1"><img src="images/chemtool.svg" class="appicon"><br />Chemtool</a>
+		</td>-->
 		<td><a href="aptus://educat1_critterding" class="button1"><img src="images/atom.svg" class="appicon"><br />Critterding</a>
 		</td>
 		<td><a href="aptus://educat1_cura" class="button1"><img src="images/printer.svg" class="appicon"><br />Cura</a>
 		</td>
 		<td><a href="aptus://educat1_dawg" class="button1"><img src="images/atom.svg" class="appicon"><br />Dawg</a>
 		</td>
+		<td><a href="aptus://educat1_drmips" class="button1"><img src="images/vbox.svg" class="appicon"><br />DrMIPS</a>
+		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://educat1_drmips" class="button1"><img src="images/vbox.svg" class="appicon"><br />DrMIPS</a>
+		<td><a href="aptus://educat1_electric" class="button1"><img src="images/science.svg" class="appicon"><br />Electric</a>
 		</td>
 		<td><a href="aptus://educat1_elki" class="button1"><img src="images/text-script.svg" class="appicon"><br />ELKI</a>
 		</td>
@@ -99,20 +101,19 @@ Last update: June 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_g3data" class="button1"><img src="images/glade.svg" class="appicon"><br />g3data</a>
 		</td>
-		<td><a href="aptus://educat1_gcx" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />Gcx</a>
-		</td>
-		<td><a href="aptus://educat1_gcompris-qt" class="button1"><img src="images/gcompris.svg" class="appicon"><br />GCompris</a>
-		</td>
-		<td><a href="aptus://educat1_gperiodic" class="button1"><img src="images/babe.svg" class="appicon"><br />GPeriodic</a>
-		</td>
-		<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
-		</td>
-	</tr>
-	<tr>
+		<!--<td><a href="aptus://educat1_gabedit" class="button1"><img src="images/science.svg" class="appicon"><br />Gabedit</a>
+		</td>-->
 		<td><a href="aptus://educat1_garlic" class="button1"><img src="images/atom.svg" class="appicon"><br />Garlic</a>
 		</td>
 		<td><a href="aptus://educat1_gazebo" class="button1"><img src="images/gnome-robots.svg" class="appicon"><br />Gazebo</a>
 		</td>
+		<td><a href="aptus://educat1_gcx" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />Gcx</a>
+		</td>
+		<td><a href="aptus://educat1_gcompris-qt" class="button1"><img src="images/gcompris.svg" class="appicon"><br />GCompris</a>
+		</td>
+		
+	</tr>
+	<tr>
 		<td><a href="aptus://educat1_geogebra" class="button1"><img src="images/glade.svg" class="appicon"><br />GeoGebra</a>
 		</td>
 		<td><a href="aptus://educat1_gfsview" class="button1"><img src="images/science.svg" class="appicon"><br />GfsView</a>
@@ -121,9 +122,9 @@ Last update: June 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat1_glueviz" class="button1"><img src="images/science.svg" class="appicon"><br />Glueviz</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat1_goldendict" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />GoldenDict</a>
+		</td>
+		<td><a href="aptus://educat1_gperiodic" class="button1"><img src="images/babe.svg" class="appicon"><br />GPeriodic</a>
 		</td>
 	</tr>
 </tbody>
