--- a/01-yad/lib/sparky-aptus-appcenter/education2.html
+++ b/01-yad/lib/sparky-aptus-appcenter/education2.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 30, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Education/Science G-N | APTus AppCenter</title>
@@ -113,16 +113,14 @@ Last update: June 30, 2020 by pavroo
 		</td>
 		<td><a href="aptus://educat2_minuet" class="button1"><img src="images/cantata.svg" class="appicon"><br />Minuet</a>
 		</td>
-		<td><a href="aptus://educat2_monteverdi" class="button1"><img src="images/image0.svg" class="appicon"><br />Monteverdi</a>
-		</td>
-		<td><a href="aptus://educat2_munipack" class="button1"><img src="images/science.svg" class="appicon"><br />Munipack</a>
-		</td>
+		<!--<td><a href="aptus://educat2_monteverdi" class="button1"><img src="images/image0.svg" class="appicon"><br />Monteverdi</a>
+		</td>-->
+		<!--<td><a href="aptus://educat2_munipack" class="button1"><img src="images/science.svg" class="appicon"><br />Munipack</a>
+		</td>-->
 		<td><a href="aptus://educat2_ncl-ncarg" class="button1"><img src="images/green.svg" class="appicon"><br />NCAR</a>
 		</td>
 		<td><a href="aptus://educat2_netgen" class="button1"><img src="images/green.svg" class="appicon"><br />Netgen</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat2_nifti2dicom" class="button1"><img src="images/science.svg" class="appicon"><br />Nifti2Dicom</a>
 		</td>
 	</tr>
