--- a/01-yad/lib/sparky-aptus-appcenter/net-communication.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 30, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -89,7 +89,7 @@ Last update: July 30, 2020 by pavroo
 		</td>-->
 	</tr>
 	<tr>
-		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br /><Psi</a>
+		<td><a href="aptus://netcom_psi" class="button1"><img src="images/im.svg" class="appicon"><br />Psi</a>
 		</td>
 		<td><a href="aptus://netcom_quassel" class="button1"><img src="images/quassel.svg" class="appicon"><br />Quassel</a>
 		</td>
