--- a/01-yad/lib/sparky-aptus-appcenter/net-email.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-email.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 18, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> e-Mail | APTus AppCenter</title>
@@ -49,17 +49,17 @@ Last update: July 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netema_geary" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Geary</a>
 		</td>
-		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
+		<td><a href="aptus://netema_gmail-desktop" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Gmail Desktop</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netema_kmail" class="button1"><img src="images/e-mail.svg" class="appicon"><br />KMail</a>
+		</td>
 		<td><a href="aptus://netema_mutt" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Mutt</a>
 		</td>
 		<td><a href="aptus://netema_sylpheed" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Sylpheed</a>
 		</td>
 		<td><a href="aptus://netema_thunderbird" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Thunderbird</a>
-		</td>
-		<td><a href="aptus://netema_trojita" class="button1"><img src="images/e-mail.svg" class="appicon"><br />Trojita</a>
 		</td>
 	</tr>
 </tbody>
