--- a/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 25, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -45,8 +45,6 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_clipgrab" class="button1"><img src="images/smtube.svg" class="appicon"><br />ClipGrab</a>
 		</td>
-		<!--<td><a href="aptus://videdi_dvd95" class="button1"><img src="images/devede.svg" class="appicon"><br />Dvd95</a>
-		</td>-->
 		<td><a href="aptus://videdi_devede" class="button1"><img src="images/devede.svg" class="appicon"><br />DeVeDe</a>
 		</td>
 		<td><a href="aptus://videdi_dvdstyler" class="button1"><img src="images/devede.svg" class="appicon"><br />DVDStyler</a>
@@ -57,14 +55,14 @@ Last update: July 25, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://videdi_kdenlive" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Kdenlive</a>
 		</td>
-		<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
-		</td>
+		<!--<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
+		</td>-->
 		<td><a href="aptus://videdi_mystiq" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Mystiq</a>
 		</td>
 		<td><a href="aptus://videdi_ogmrip" class="button1"><img src="images/devede.svg" class="appicon"><br />OGMRip</a>
 		</td>
-		<!--<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
-		</td>-->
+		<td><a href="aptus://videdi_openshot" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot</a>
+		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
 		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
