--- a/01-yad/lib/sparky-aptus-appcenter/net-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 18, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -46,6 +46,8 @@ Last update: July 18, 2020 by pavroo
 		<td><a href="aptus://netoth_megasync" class="button1"><img src="images/megasync.svg" class="appicon"><br />MegaSync</a>
 		</td>
 		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
+		</td>
+		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
 		</td>
 	</tr>
 </tbody>
