--- a/01-yad/lib/sparky-aptus-appcenter/office-finance.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-finance.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 24, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Finance | APTus AppCenter</title>
@@ -41,7 +41,7 @@ Last update: June 24, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://offfin_aqbanking-tools" class="button1"><img src="images/terminal.svg" class="appicon"><br />AqBanking</a>
 		</td>
-		<td><a href="aptus://offfin_bitcoin-qt" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Bitcoin Qt</a>
+		<td><a href="aptus://offfin_electrum" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Electrum</a>
 		</td>
 		<td><a href="aptus://offfin_eqonomize" class="button1"><img src="images/vcard.svg" class="appicon"><br />Eqonomize!</a>
 		</td>
@@ -55,18 +55,10 @@ Last update: June 24, 2020 by pavroo
 	<tr>
 		<td><a href="aptus://offfin_ledger" class="button1"><img src="images/terminal.svg" class="appicon"><br />Ledger</a>
 		</td>
-		<td><a href="aptus://offfin_litecoin-qt" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Litecoin Qt</a>
-		</td>
 		<td><a href="aptus://offfin_monero" class="button1"><img src="images/bitcoin.svg" class="appicon"><br />Monero Client</a>
 		</td>
-		<!-- <td><a href="aptus://offfin_moneydance" class="button1"><img src="images/vcard.svg" class="appicon"><br />Moneydance</a>
-		</td>-->
 		<td><a href="aptus://offfin_skrooge" class="button1"><img src="images/vcard.svg" class="appicon"><br />Skrooge</a>
 		</td>
-		<td>
-		</td>
-		<tr>
-		</tr>
 	</tr>
 </tbody>
 </div>
