--- a/01-yad/lib/sparky-aptus-appcenter/office-note.html
+++ b/01-yad/lib/sparky-aptus-appcenter/office-note.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 30, 2020 by pavroo
+Last update: August 8, 2020 by pavroo
 -->
 	<head>
 		<title>Office -> Notes | APTus AppCenter</title>
@@ -43,32 +43,26 @@ Last update: June 30, 2020 by pavroo
 		</td>
 		<td><a href="aptus://offnot_gnote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Gnote</a>
 		</td>
+		<td><a href="aptus://offnot_joplin" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Joplin</a>
+		</td>
 		<!--<td><a href="aptus://offnot_keepnote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Keepnote</a>
 		</td>-->
 		<td><a href="aptus://offnot_kjots" class="button1"><img src="images/knotes.svg" class="appicon"><br />Kjots</a>
 		</td>
 		<td><a href="aptus://offnot_knotes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Knotes</a>
 		</td>
+		<td><a href="aptus://offnot_nixnote2" class="button1"><img src="images/tomboy.svg" class="appicon"><br />NixNote</a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://offnot_noblenote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Noblenote</a>
 		</td>
 		<td><a href="aptus://offnot_note" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Note</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://offnot_rhinote" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Rhinote</a>
 		</td>
-		<!--<td><a href="aptus://offnot_tomboy" class="button1"><img src="images/tomboy.svg" class="appicon"><br />Tomboy</a>
-		</td>-->
 		<!--<td><a href="aptus://offnot_xfce4-notes" class="button1"><img src="images/knotes.svg" class="appicon"><br />Xfce4 Notes</a>
 		</td>-->
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
 	</tr>
 </tbody>
 </div>
