--- a/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-terminals.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 24, 2020 by pavroo
+Last update: August 23, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Terminal Emulators | APTus AppCenter</title>
@@ -39,8 +39,8 @@ Last update: June 24, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://accter_cool-retro-term" class="button1"><img src="images/terminal.svg" class="appicon"><br />Cool Retro Term</a>
-		</td>
+		<!--<td><a href="aptus://accter_cool-retro-term" class="button1"><img src="images/terminal.svg" class="appicon"><br />Cool Retro Term</a>
+		</td>-->
 		<td><a href="aptus://accter_deepin-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Deepin Terminal</a>
 		</td>
 		<td><a href="aptus://accter_edex-ui" class="button1"><img src="images/terminal.svg" class="appicon"><br />eDEX-UI</a>
@@ -51,10 +51,10 @@ Last update: June 24, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_gnome-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />GNOME Terminal</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_konsole" class="button1"><img src="images/terminal.svg" class="appicon"><br />Konsole</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_lxterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />LXterminal</a>
 		</td>
 		<td><a href="aptus://accter_mate-terminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />MATE Terminal</a>
@@ -65,10 +65,10 @@ Last update: June 24, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_pterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />Pterm</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_qterminal" class="button1"><img src="images/terminal.svg" class="appicon"><br />Qterminal</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_sakura" class="button1"><img src="images/terminal.svg" class="appicon"><br />Sakura</a>
 		</td>
 		<td><a href="aptus://accter_spterm" class="button1"><img src="images/terminal.svg" class="appicon"><br />SPterm</a>
@@ -79,10 +79,10 @@ Last update: June 24, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accter_terminology" class="button1"><img src="images/terminal.svg" class="appicon"><br />Terminology</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accter_termit" class="button1"><img src="images/terminal.svg" class="appicon"><br />Termit</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accter_tilda" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilda</a>
 		</td>
 		<td><a href="aptus://accter_tilix" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilix</a>
