--- a/01-yad/lib/sparky-aptus-appcenter/accessories-weather.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-weather.html
@@ -6,7 +6,7 @@ License: GNU GPL 3
 Last update: August 23, 2020 by pavroo
 -->
 	<head>
-		<title>System -> Virtualization | APTus AppCenter</title>
+		<title>Accessories -> Weather | APTus AppCenter</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
 		<script src="./js/lang.js" type="text/javascript"></script>
 	</head>
@@ -18,7 +18,7 @@ Last update: August 23, 2020 by pavroo
 	</div>
 	<div id="menu-wrapper-back">
 		<ul id="menu">
-			<li><a href="system.html"><span>&laquo;-- </span></a></li>
+			<li><a href="accessories.html"><span>&laquo;-- </span></a></li>
 			<li><a href="index.html"><span><script>dict.print('main', 'applications');</script></span></a></li>
 			<li><a href="tools.html"><span><script>dict.print('main', 'aptus');</script></span></a></li>
 			<li><a href="aptus://narz_search"><span><script>dict.print('main', 'search');</script></span></a></li>
@@ -39,23 +39,21 @@ Last update: August 23, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://sysvir_aqemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />AQEMU</a>
+		<td><a href="aptus://accwea_ansiweather" class="button1"><img src="images/terminal.svg" class="appicon"><br />AnsiWeather</a>
 		</td>
-		<td><a href="aptus://sysvir_docker.io" class="button1"><img src="images/container.svg" class="appicon"><br />Docker</a>
+		<td><a href="aptus://accwea_gis-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />Gis Weather</a>
 		</td>
-		<td><a href="aptus://sysvir_qemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />QEMU</a>
+		<td><a href="aptus://accwea_gnome-shell-extension-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Shell Extension Weather</a>
 		</td>
-		<td><a href="aptus://sysvir_virtinst" class="button1"><img src="images/terminal.svg" class="appicon"><br />VirtInst</a>
+		<td><a href="aptus://accwea_gnome-weather" class="button1"><img src="images/weather.svg" class="appicon"><br />GNOME Weather</a>
 		</td>
-		<td><a href="aptus://sysvir_virt-manager" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Manager</a>
+		<td><a href="aptus://accwea_weather-util" class="button1"><img src="images/terminal.svg" class="appicon"><br />Weather Util</a>
 		</td>
-		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
+		<td><a href="aptus://accwea_wmweather+" class="button1"><img src="images/weather.svg" class="appicon"><br />WMWeather+</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://sysvir_virtualbox-6.1" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
-		</td>
-		<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
+		<td><a href="aptus://accwea_xfce4-weather-plugin" class="button1"><img src="images/weather.svg" class="appicon"><br />Xfce4 Weather Plugin</a>
 		</td>
 	</tr>
 </tbody>
