--- a/01-yad/lib/sparky-aptus-appcenter/accessories.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 15, 2020 by pavroo
+Last update: August 23, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories | APTus AppCenter</title>
@@ -57,7 +57,15 @@ Last update: July 15, 2020 by pavroo
 		</td>
 		<td><a href="accessories-usb.html" class="button"><span><script>dict.print('main', 'usb');</script></span></a>
 		</td>
+		<td><a href="accessories-weather.html" class="button"><span><script>dict.print('main', 'weather');</script></span></a>
+		</td>
+	</tr>
+	<tr>
 		<td><a href="accessories-others.html" class="button"><span><script>dict.print('main', 'others');</script></span></a>
+		</td>
+		<td>
+		</td>
+		<td>
 		</td>
 	</tr>
 </tbody>
