--- a/01-yad/lib/sparky-aptus-appcenter/development.html
+++ b/01-yad/lib/sparky-aptus-appcenter/development.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Development | APTus AppCenter</title>
@@ -39,8 +39,6 @@ Last update: August 8, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://devtoo_android-sdk" class="button1"><img src="images/anbox.svg" class="appicon"><br />Android SDK</a>
-		</td>
 		<td><a href="aptus://devtoo_anjuta" class="button1"><img src="images/anjuta.svg" class="appicon"><br />Anjuta</a>
 		</td>
 		<td><a href="aptus://devtoo_arduino" class="button1"><img src="images/arduino.svg" class="appicon"><br />Arduino</a>
@@ -51,10 +49,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_bless" class="button1"><img src="images/text-script.svg" class="appicon"><br />Bless</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_bibledit" class="button1"><img src="images1/document-black.svg" class="appicon"><br />Bible Editor</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_bluefish" class="button1"><img src="images/bluefish.svg" class="appicon"><br />Bluefish</a>
 		</td>
 		<td><a href="aptus://devtoo_bluegriffon" class="button1"><img src="images/bluegriffon.svg" class="appicon"><br />BlueGriffon</a>
@@ -65,10 +63,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_codelite" class="button1"><img src="images/text-script.svg" class="appicon"><br />CodeLite</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_coinor-csdp" class="button1"><img src="images/default-icon.svg" class="appicon"><br />CSDP</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_cudatext" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Cudatext</a>
 		</td>
 		<td><a href="aptus://devtoo_edi" class="button1"><img src="images/text-script.svg" class="appicon"><br />EDI</a>
@@ -79,10 +77,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_enventor" class="button1"><img src="images/text-script.svg" class="appicon"><br />Enventor</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_eric" class="button1"><img src="images/python.svg" class="appicon"><br />Eric</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_erlang-observer" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Erlang Observer</a>
 		</td>
 		<td><a href="aptus://devtoo_gambas3-ide" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Gambas IDE</a>
@@ -93,10 +91,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_git" class="button1"><img src="images/git.svg" class="appicon"><br />Git</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_gitg" class="button1"><img src="images/git.svg" class="appicon"><br />Gitg</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_git-gui" class="button1"><img src="images/git.svg" class="appicon"><br />Git GUI</a>
 		</td>
 		<td><a href="aptus://devtoo_gitkraken" class="button1"><img src="images/git.svg" class="appicon"><br />GitKraken</a>
@@ -107,11 +105,13 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_golang" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Go Lang</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_groovy" class="button1"><img src="images/java.svg" class="appicon"><br />Groovy</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_hexyl" class="button1"><img src="images/default-icon.svg" class="appicon"><br />hexyl</a>
+		</td>
+		<td><a href="aptus://devtoo_default-jre" class="button1"><img src="images/java.svg" class="appicon"><br />Java Runtime</a>
 		</td>
 		<!--<td><a href="aptus://devtoo_jeex" class="button1"><img src="images/text-script.svg" class="appicon"><br />Jeex</a>
 		</td>-->
@@ -133,8 +133,6 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_leo" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Leo Editor</a>
 		</td>
-		<!--<td><a href="aptus://devtoo_lpe" class="button1"><img src="images/text-editor.svg" class="appicon"><br />LPE</a>
-		</td>-->
 		<td><a href="aptus://devtoo_lyx" class="button1"><img src="images/tex.svg" class="appicon"><br />LyX</a>
 		</td>
 		<td><a href="aptus://devtoo_minizinc" class="button1"><img src="images/default-icon.svg" class="appicon"><br />MiniZinc</a>
@@ -147,16 +145,16 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_nodejs" class="button1"><img src="images/javascript.svg" class="appicon"><br />Node.js</a>
 		</td>
-		<!--<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
-		</td>-->
+		<td><a href="aptus://devtoo_npm" class="button1"><img src="images/javascript.svg" class="appicon"><br />npm</a>
+		</td>
 		<td><a href="aptus://devtoo_perl" class="button1"><img src="images/perl.svg" class="appicon"><br />Perl</a>
 		</td>
 		<td><a href="aptus://devtoo_php" class="button1"><img src="images/php.svg" class="appicon"><br />PHP</a>
 		</td>
-		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_pycode-browser" class="button1"><img src="images/python.svg" class="appicon"><br />PyCode Browser</a>
+		</td>
 		<td><a href="aptus://devtoo_python3" class="button1"><img src="images/python.svg" class="appicon"><br />Python3</a>
 		</td>
 		<td><a href="aptus://devtoo_qtcreator" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt Creator</a>
@@ -167,11 +165,13 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_spyder" class="button1"><img src="images/python.svg" class="appicon"><br />Spyder</a>
 		</td>
-		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://devtoo_subversion" class="button1"><img src="images1/vector.svg" class="appicon"><br />Subversion</a>
+		</td>
 		<td><a href="aptus://devtoo_texstudio" class="button1"><img src="images/tex.svg" class="appicon"><br />TeXstudio</a>
+		</td>
+		<td><a href="aptus://devtoo_thonny" class="button1"><img src="images/python.svg" class="appicon"><br />Thonny</a>
 		</td>
 		<td><a href="aptus://devtoo_tweak" class="button1"><img src="images/text-editor.svg" class="appicon"><br />Tweak</a>
 		</td>
@@ -179,12 +179,12 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://devtoo_umbrello" class="button1"><img src="images/kde.svg" class="appicon"><br />Umbrello</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://devtoo_valac" class="button1"><img src="images1/vala.svg" class="appicon"><br />Vala</a>
 		</td>
 		<td><a href="aptus://devtoo_valgrind" class="button1"><img src="images/system-monitor.svg" class="appicon"><br />Valgrind</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://devtoo_code" class="button1"><img src="images/visualstudiocode.svg" class="appicon"><br />Visual Code Studio</a>
 		</td>
 		<td><a href="aptus://devtoo_codium" class="button1"><img src="images/documents.svg" class="appicon"><br />VSCodium</a>
