--- a/01-yad/lib/sparky-aptus-appcenter/education2.html
+++ b/01-yad/lib/sparky-aptus-appcenter/education2.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Education/Science G-N | APTus AppCenter</title>
@@ -117,8 +117,8 @@ Last update: August 8, 2020 by pavroo
 		</td>-->
 		<!--<td><a href="aptus://educat2_munipack" class="button1"><img src="images/science.svg" class="appicon"><br />Munipack</a>
 		</td>-->
-		<td><a href="aptus://educat2_ncl-ncarg" class="button1"><img src="images/green.svg" class="appicon"><br />NCAR</a>
-		</td>
+		<!--<td><a href="aptus://educat2_ncl-ncarg" class="button1"><img src="images/green.svg" class="appicon"><br />NCAR</a>
+		</td>-->
 		<td><a href="aptus://educat2_netgen" class="button1"><img src="images/green.svg" class="appicon"><br />Netgen</a>
 		</td>
 		<td><a href="aptus://educat2_nifti2dicom" class="button1"><img src="images/science.svg" class="appicon"><br />Nifti2Dicom</a>
