--- a/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 18, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -69,34 +69,28 @@ Last update: June 18, 2020 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://audtoo_gmidimonitor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Gmidimonitor</a>
-		</td>
 		<td><a href="aptus://audtoo_gtranscribe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />gTranscribe</a>
 		</td>
 		<td><a href="aptus://audtoo_guitarix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Guitarix</a>
 		</td>
-		<!--<td><a href="aptus://audtoo_hydrogen" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Hydrogen</a>
-		</td>
-		<td><a href="aptus://audtoo_idjc" class="button1"><img src="images/radio.svg" class="appicon"><br />Internet DJ Console</a>
-		</td>-->
 		<td><a href="aptus://audtoo_jaaa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JACK and ALSA Audio Analyser</a>
 		</td>
 		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
 		</td>
 		<td><a href="aptus://audtoo_kluppe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kluppe</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_kmix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMix</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_kwave" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />Kwave</a>
 		</td>
 		<td><a href="aptus://audtoo_lmms" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LMMS</a>
 		</td>
 		<td><a href="aptus://audtoo_milkytracker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Milky Tracker</a>
 		</td>
-		<!--<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
-		</td>-->
+		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
+		</td>
 		<td><a href="aptus://audtoo_muse" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MusE</a>
 		</td>
 		<td><a href="aptus://audtoo_padthv1" class="button1"><img src="images/noise.svg" class="appicon"><br />Padthv1</a>
@@ -107,8 +101,6 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_puredata" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pure Data</a>
 		</td>
-		<!--<td><a href="aptus://audtoo_python-pyo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pyo</a>
-		</td>-->
 		<td><a href="aptus://audtoo_qjackctl" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QjackCtl</a>
 		</td>
 		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
@@ -150,14 +142,6 @@ Last update: June 18, 2020 by pavroo
 		<td><a href="aptus://audtoo_wavbreaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />WavBreaker</a>
 		</td>
 		<td><a href="aptus://audtoo_yoshimi" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Yoshimi</a>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
