--- a/01-yad/lib/sparky-aptus-appcenter/media-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 18, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Others | APTus AppCenter</title>
@@ -47,38 +47,28 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_bitmeter" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />BitMeter</a>
 		</td>
-		<td><a href="aptus://medoth_denemo" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Denemo</a>
-		</td>
 		<td><a href="aptus://medoth_easytag" class="button1"><img src="images/easytag.svg" class="appicon"><br />EasyTag</a>
+		</td>
+		<td><a href="aptus://medoth_ebook-speaker" class="button1"><img src="images/text.svg" class="appicon"><br />eBook Speaker</a>
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://medoth_ebook-speaker" class="button1"><img src="images/text.svg" class="appicon"><br />eBook Speaker</a>
-		</td>
 		<td><a href="aptus://medoth_exfalso" class="button1"><img src="images/easytag.svg" class="appicon"><br />Ex Falso</a>
 		</td>
 		<td><a href="aptus://medoth_fmit" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />FMIT</a>
 		</td>
-		<!--<td><a href="aptus://medoth_gespeaker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Gespeaker</a>
-		</td>
-		<td><a href="aptus://medoth_gladish" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />gLadish</a>
-		</td>-->
 		<td><a href="aptus://medoth_grig" class="button1"><img src="images/radio.svg" class="appicon"><br />GNOME RIG</a>
 		</td>
 		<td><a href="aptus://medoth_gnome-sound-recorder" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />GNOME Sound Recorder</a>
 		</td>
 		<td><a href="aptus://medoth_gpodder" class="button1"><img src="images/easytag.svg" class="appicon"><br />gPodder</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_gtick" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />GTick</a>
 		</td>
-		<!--<td><a href="aptus://medoth_gtk-recordmydesktop" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />GTK-RecordMyDesktop</a>
-		</td>-->
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_hdhomerun-config" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />HDHomerun Config</a>
 		</td>
-		<!--<td><a href="aptus://medoth_jack-mixer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Mixer</a>
-		</td>-->
 		<td><a href="aptus://medoth_jmeter" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JMeter</a>
 		</td>
 		<td><a href="aptus://medoth_jnoisemeter" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JNoiseMeter</a>
@@ -87,12 +77,10 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_kmetronome" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMetronome</a>
 		</td>
-	</tr>
-	<tr>
-		<!--<td><a href="aptus://medoth_kmidimon" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />KMidimon</a>
-		</td>-->
 		<td><a href="aptus://medoth_kid3" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kid3</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_kid3-qt" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kid3 Qt</a>
 		</td>
 		<!--<td><a href="aptus://medoth_kover" class="button1"><img src="images/media-optical.svg" class="appicon"><br />Kover</a>
@@ -105,13 +93,11 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_mopidy" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Mopidy</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_mudita24" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Mudita24</a>
 		</td>
-		<!--<td><a href="aptus://medoth_musescore" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MuseScore</a>
-		</td>-->
-		<td><a href="aptus://medoth_patchage" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Patchage</a>
+	</tr>
+	<tr>
+		<td><a href="aptus://medoth_musescore" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MuseScore</a>
 		</td>
 		<td><a href="aptus://medoth_pavucontrol" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pavucontrol</a>
 		</td>
@@ -120,11 +106,11 @@ Last update: June 18, 2020 by pavroo
 		<td><a href="aptus://medoth_performous" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Performous</a>
 		</td>
 		<td><a href="aptus://medoth_pianobooster" class="button1"><img src="images1/hexter.svg" class="appicon"><br />Pianobooster</a>
-		</td>
-	</tr>
-	<tr>	
+		</td>	
 		<td><a href="aptus://medoth_psk31lx" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />psk31lx</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_pulseaudio-equalizer" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />PulseAudio Equalizer</a>
 		</td>
 		<td><a href="aptus://medoth_qasconfig" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qasconfig</a>
@@ -135,10 +121,10 @@ Last update: June 18, 2020 by pavroo
 		</td>
 		<td><a href="aptus://medoth_rakarrack" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Rakarrack</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://medoth_simplescreenrecorder" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />Simple Screen Recorder</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://medoth_swami" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Swami</a>
 		</td>
 		<td><a href="aptus://medoth_timemachine" class="button1"><img src="images/audio-recorder.svg" class="appicon"><br />Time Machine</a>
@@ -146,8 +132,6 @@ Last update: June 18, 2020 by pavroo
 		<td><a href="aptus://medoth_vokoscreen-ng" class="button1"><img src="images/gnome-camera.svg" class="appicon"><br />VokoscreenNG</a>
 		</td>
 		<td><a href="aptus://medoth_wsjtx" class="button1"><img src="images/radio.svg" class="appicon"><br />WSJT-X</a>
-		</td>
-		<td>
 		</td>
 	</tr>
 </tbody>
