--- a/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/01-yad/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 8, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -43,16 +43,18 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_blender" class="button1"><img src="images/blender.svg" class="appicon"><br />Blender</a>
 		</td>
+		<td><a href="aptus://videdi_ciano" class="button1"><img src="images/smtube.svg" class="appicon"><br />Ciano</a>
+		</td>
 		<td><a href="aptus://videdi_clipgrab" class="button1"><img src="images/smtube.svg" class="appicon"><br />ClipGrab</a>
 		</td>
 		<td><a href="aptus://videdi_devede" class="button1"><img src="images/devede.svg" class="appicon"><br />DeVeDe</a>
 		</td>
 		<td><a href="aptus://videdi_dvdstyler" class="button1"><img src="images/devede.svg" class="appicon"><br />DVDStyler</a>
 		</td>
-		<td><a href="aptus://videdi_flowblade" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Flowblade</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_flowblade" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Flowblade</a>
+		</td>
 		<td><a href="aptus://videdi_kdenlive" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />Kdenlive</a>
 		</td>
 		<!--<td><a href="aptus://videdi_lives" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />LiVES</a>
@@ -65,10 +67,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
-		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
+		</td>
 		<td><a href="aptus://videdi_shotcut" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shotcut</a>
 		</td>
 		<td><a href="aptus://videdi_shutter-encoder" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shutter Encoder</a>
@@ -79,10 +81,10 @@ Last update: August 8, 2020 by pavroo
 		</td>
 		<td><a href="aptus://videdi_videomass" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Videomass</a>
 		</td>
-		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
+		</td>
 		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
 		</td>
 	</tr>
