--- a/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/01-yad/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 25, 2020 by pavroo
+Last update: September 06, 2020 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -43,17 +43,19 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_brave-browser" class="button1"><img src="images/brave.svg" class="appicon"><br />Brave</a>
 		</td>
+		<td><a href="aptus://netweb_browsh" class="button1"><img src="images/terminal.svg" class="appicon"><br />Browsh</a>
+		</td>
 		<td><a href="aptus://netweb_chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Chromium</a>
 		</td>
 		<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
 		</td>
 		<td><a href="aptus://netweb_dillo" class="button1"><img src="images0/dillo.png" class="appicon"><br />Dillo</a>
 		</td>
-		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
-		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://netweb_elinks" class="button1"><img src="images/web-browser.svg" class="appicon"><br />ELinks</a>
+		<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
+		</td>
+		<td><a href="aptus://netweb_elinks" class="button1"><img src="images/terminal.svg" class="appicon"><br />ELinks</a>
 		</td>
 		<td><a href="aptus://netweb_epiphany-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Epiphany</a>
 		</td>
@@ -65,27 +67,27 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
-		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
+		</td>
 		<td><a href="aptus://netweb_iridium-browser" class="button1"><img src="images0/iridium.png" class="appicon"><br />Iridium</a>
 		</td>
 		<td><a href="aptus://netweb_iron" class="button1"><img src="images0/iron.png" class="appicon"><br />Iron</a>
 		</td>
 		<td><a href="aptus://netweb_konqueror" class="button1"><img src="images/konqueror.svg" class="appicon"><br />Konqueror</a>
 		</td>
-		<td><a href="aptus://netweb_links2" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Links2</a>
+		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
-		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Lynx</a>
-		</td>
-		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
+		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_midori" class="button1"><img src="images0/midori.svg" class="appicon"><br />Midori</a>
+		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
 		</td>
-		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Netrik</a>
+		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
 		</td>
@@ -93,10 +95,10 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
-		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
+		</td>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
@@ -105,12 +107,12 @@ Last update: July 25, 2020 by pavroo
 		</td>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
-		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/web-browser.svg" class="appicon"><br />w3m</a>
-		</td>
-		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
+		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://netweb_waterfox-classic-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Classic</a>
+		</td>
 		<td><a href="aptus://netweb_waterfox-current-kpe" class="button1"><img src="images/waterfox.svg" class="appicon"><br />Waterfox Current</a>
 		</td>
 	</tr>
