--- a/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/01-yad/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: July 23, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -101,14 +101,16 @@ Last update: July 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
+		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
+		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
 		</td>
 		<td><a href="aptus://accoth_wbar" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar</a>
 		</td>
-		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://accoth_wbar-config" class="button1"><img src="images/dock.svg" class="appicon"><br />Wbar Config</a>
+		</td>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
