--- a/01-yad/lib/sparky-aptus-appcenter/system-virtual.html
+++ b/01-yad/lib/sparky-aptus-appcenter/system-virtual.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 23, 2020 by pavroo
+Last update: September 16, 2020 by pavroo
 -->
 	<head>
 		<title>System -> Virtualization | APTus AppCenter</title>
@@ -39,8 +39,6 @@ Last update: August 23, 2020 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://sysvir_aqemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />AQEMU</a>
-		</td>
 		<td><a href="aptus://sysvir_docker.io" class="button1"><img src="images/container.svg" class="appicon"><br />Docker</a>
 		</td>
 		<td><a href="aptus://sysvir_qemu" class="button1"><img src="images/default-icon.svg" class="appicon"><br />QEMU</a>
@@ -51,10 +49,10 @@ Last update: August 23, 2020 by pavroo
 		</td>
 		<td><a href="aptus://sysvir_virt-viewer" class="button1"><img src="images/virt-manager.svg" class="appicon"><br />Virt Viewer</a>
 		</td>
+		<td><a href="aptus://sysvir_virtualbox-qt" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
+		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://sysvir_virtualbox-6.1" class="button1"><img src="images/vbox.svg" class="appicon"><br />VirtualBox</a>
-		</td>
 		<td><a href="aptus://sysvir_vmware" class="button1"><img src="images/vmware.svg" class="appicon"><br />VMware</a>
 		</td>
 	</tr>
